style.css
body {
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
    min-height: 100vh;
    flex-direction: column;


}
.header {
    display: flex;
    background-color: #1F2937;
    color: white;
    padding: 16px;
    font-size: 16px;
    font-style: italic;
    flex-wrap: wrap;
    flex: 1;
    flex-shrink: 0;
    

}
.header-logo {
    font-size: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-bar {
    padding: 8px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

ul {
    list-style-type: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
    gap: 16px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 18px;
}

.info {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    display: flex;
    align-items: center;
}

img {
    height: 200px;
    width: 200px;
}

.text {
    height: 100px;
    width: 400px;
    font-size: 16px;
    
}
.button {
   background-color: royalblue;
   border: 1px solid royalblue;
   color: white;
   padding: 8px 16px;
   border-radius: 8px;
   text-align: center;
   display: inline-block;
   font-size: 16px;
}

.main-info {
    display: flex;
    gap: 250px;
    padding: 80px;
    align-items: center;
    justify-content: center;

}

.main-content {
    display: flex;
    flex-wrap: wrap;
    flex: 1;
    justify-content: center;
    align-items: center;
   padding: 16px;
    gap: 16px;
}

.photograph {
    display: flex;
    flex-wrap: wrap;
    /*flex: 1;*/
    justify-content: center;
    /*align-items: center;*/
    width: 200px;
    height: 200px;
}

.title {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    display: flex;
    justify-content: center;
    margin-bottom: 32px;
    margin-top: 0;

}
.container {
    display: flex;
    justify-content: center;
    gap: 8px; 
    flex-wrap: wrap; 
    flex: 1; 
    min-width: 800px;
    margin-bottom: 70px;
}
photo {
    display: flex;
    flex-wrap: wrap;
    flex: 1;
}
.allpics {
    display: flex;
    gap: 8px;

    /*justify-content: center;*/
    /*align-items: center;*/ 
   
}
.testimonial {
    background-color: #E5E7EB;
    color: #1F2937;
    font-size: 16px;
    font-style: italic;
    margin-top: 32px;
    margin-bottom: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    /*padding: 8px;*/
    flex: 1; 
    flex-wrap: wrap;
    flex-shrink: 0;
}
.test {
    height: 100px;
    width: 400px;
    padding: 45px;
}

.application {
   display: flex;
   width: 600px;
   height: 100px;
   justify-content: center;
   align-content: center;
}
.txt {
    color: white;
    font-size: 24px;
    font-weight: bold;
    margin-left: 45px;
}
.txt2 {
    color: whitesmoke;
    font-size: 18px;
    margin-left: 45px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
}
.signup-button {
    background-color: royalblue;
   border: 1px solid white;
   color: white;
   padding: 8px 16px;
   border-radius: 5px;
   text-align: center;
   font-size: 24px;
   font-weight: 900;
}
.cta {
    display: flex;
    flex-direction: column;
    padding: 16px;
    justify-content: center;
}
.application {
    background-color: royalblue;
    color: white;
    width: auto;
    height: 100px;
    border: 4px solid royalblue;
    border-width: 5px;
    border-radius: 5px;

}
.txt {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: center;
}

.signup-button {
    display: flex;
    justify-content: center;
    align-items: center;

}
.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    color: white;
    font-size: 16px;
    position: fixed;
    width: 100%;
    flex-shrink: 0;
    flex: 1;
    bottom: 0;
    margin-top: auto;
    padding: 0;


}

